apps/single-store-test-2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: single-store-test-2
  labels:
    app: single-store-test-2
spec:
  type: ClusterIP
  selector:
    app: single-store-test-2
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
